--- a/src/style.scss
+++ b/src/style.scss
@@ -3,53 +3,66 @@
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-
-	.project-list {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-start;
-
-		.project {
-			display: flex;
-			width: 100%;
-			height: 300px; // Set a fixed height for each project card
-			margin-bottom: 20px;
-			border: 1px solid #f1f1f1;
-			box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-			transition: box-shadow 0.3s ease;
-
-			&:hover {
-				box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-			}
-
-			.project-image {
-				width: 40%; // Adjust the width for the image
-				flex: 0 0 auto;
-
-				img {
-					width: 100%;
-					height: 100%;
-					object-fit: cover; // Maintain aspect ratio and fill the container
-				}
-			}
-
-			.project-details {
-				flex: 1;
-				display: flex;
-				flex-direction: column;
-				padding: 20px;
-
-				.project-name {
-					font-size: 20px;
-					margin-bottom: 10px;
-				}
-
-				.technology-used,
-				.project-description,
-				.project-link {
-					margin-bottom: 10px;
-				}
-			}
-		}
-	}
 }
+
+.wp-block-ep-portfolio-list .project-list {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.wp-block-ep-portfolio-list .project {
+	display: flex;
+	width: 100%;
+	height: 300px; /* Set a fixed height for each project card */
+	margin-bottom: 20px;
+	border: 1px solid #f1f1f1;
+	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+	transition: box-shadow 0.3s ease;
+}
+
+.wp-block-ep-portfolio-list .project:hover {
+	box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.wp-block-ep-portfolio-list .project .project-image {
+	width: 40%; /* Adjust the width for the image */
+	flex: 0 0 auto;
+}
+
+.wp-block-ep-portfolio-list .project .project-image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover; /* Maintain aspect ratio and fill the container */
+}
+
+.wp-block-ep-portfolio-list .project .project-details {
+	flex: 1;
+	display: flex;
+	flex-direction: column; /* Change to column */
+	width: 60%; /* Adjusted width */
+	padding: 20px;
+}
+
+.wp-block-ep-portfolio-list .project .project-details .project-name {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+.wp-block-ep-portfolio-list .project .project-details .technology-used,
+.wp-block-ep-portfolio-list .project .project-details .project-description,
+.wp-block-ep-portfolio-list .project .project-details .project-link {
+	margin-bottom: 10px;
+}
+
+.technology {
+	display: inline-block;
+	padding: 2px 6px;
+	border: .5px solid black;
+	margin-right: 5px;
+}
+
+.wp-block-ep-portfolio-list .project .project-details .project-link {
+	padding-bottom: 20px;
+}
+
